v1/build/data-parser/antlr/expParser.js
/*! resume 2015-11-19 */
function expParser(a){return antlr4.Parser.call(this,a),this._interp=new antlr4.atn.ParserATNSimulator(this,atn,decisionsToDFA,sharedContextCache),this.ruleNames=ruleNames,this.literalNames=literalNames,this.symbolicNames=symbolicNames,this}function ExperienceContext(a,b,c){return void 0===b&&(b=null),(void 0===c||null===c)&&(c=-1),antlr4.ParserRuleContext.call(this,b,c),this.parser=a,this.ruleIndex=expParser.RULE_experience,this}function Duration_time_expContext(a,b,c){return void 0===b&&(b=null),(void 0===c||null===c)&&(c=-1),antlr4.ParserRuleContext.call(this,b,c),this.parser=a,this.ruleIndex=expParser.RULE_duration_time_exp,this}function Exp_time_durationContext(a,b,c){return void 0===b&&(b=null),(void 0===c||null===c)&&(c=-1),antlr4.ParserRuleContext.call(this,b,c),this.parser=a,this.ruleIndex=expParser.RULE_exp_time_duration,this}var antlr4=require("antlr4/index"),expListener=require("./expListener").expListener,grammarFileName="exp.g4",serializedATN=["а훑舆괭䐗껱趀ꫝ",";			","\r","\n\n\f","\n\f","","\n\f!","&\n\f)","-\n\f0","4\n\f7","\b'.5",">\f","'\b\r","	\n\n","\r\f\b\f","	\r","","","","","","","","","!"," ",' "!','"##',"$&%$&)","'('%(*",")'*.","+-,+-0","./.,/1","0.1524","3247","565368","75899","	\f'.5"].join(""),atn=(new antlr4.atn.ATNDeserializer).deserialize(serializedATN),decisionsToDFA=atn.decisionToState.map(function(a,b){return new antlr4.dfa.DFA(a,b)}),sharedContextCache=new antlr4.PredictionContextCache,literalNames=[],symbolicNames=["null","EXP_VALUE","IN_TIME","EXPERIENCE","INT","DOUBLE","ALPHANUMERIC","YEAR","MONTH","WS"],ruleNames=["experience","duration_time_exp","exp_time_duration"];expParser.prototype=Object.create(antlr4.Parser.prototype),expParser.prototype.constructor=expParser,Object.defineProperty(expParser.prototype,"atn",{get:function(){return atn}}),expParser.EOF=antlr4.Token.EOF,expParser.EXP_VALUE=1,expParser.IN_TIME=2,expParser.EXPERIENCE=3,expParser.INT=4,expParser.DOUBLE=5,expParser.ALPHANUMERIC=6,expParser.YEAR=7,expParser.MONTH=8,expParser.WS=9,expParser.RULE_experience=0,expParser.RULE_duration_time_exp=1,expParser.RULE_exp_time_duration=2,ExperienceContext.prototype=Object.create(antlr4.ParserRuleContext.prototype),ExperienceContext.prototype.constructor=ExperienceContext,ExperienceContext.prototype.duration_time_exp=function(){return this.getTypedRuleContext(Duration_time_expContext,0)},ExperienceContext.prototype.exp_time_duration=function(){return this.getTypedRuleContext(Exp_time_durationContext,0)},ExperienceContext.prototype.EOF=function(){return this.getToken(expParser.EOF,0)},ExperienceContext.prototype.enterRule=function(a){a instanceof expListener&&a.enterExperience(this)},ExperienceContext.prototype.exitRule=function(a){a instanceof expListener&&a.exitExperience(this)},expParser.ExperienceContext=ExperienceContext,expParser.prototype.experience=function(){var a=new ExperienceContext(this,this._ctx,this.state);this.enterRule(a,0,expParser.RULE_experience);try{this.state=10;var b=this._interp.adaptivePredict(this._input,0,this._ctx);switch(b){case 1:this.enterOuterAlt(a,1),this.state=6,this.duration_time_exp();break;case 2:this.enterOuterAlt(a,2),this.state=7,this.exp_time_duration(),this.state=8,this.match(expParser.EOF)}}catch(c){if(!(c instanceof antlr4.error.RecognitionException))throw c;a.exception=c,this._errHandler.reportError(this,c),this._errHandler.recover(this,c)}finally{this.exitRule()}return a},Duration_time_expContext.prototype=Object.create(antlr4.ParserRuleContext.prototype),Duration_time_expContext.prototype.constructor=Duration_time_expContext,Duration_time_expContext.prototype.EXP_VALUE=function(){return this.getToken(expParser.EXP_VALUE,0)},Duration_time_expContext.prototype.IN_TIME=function(){return this.getToken(expParser.IN_TIME,0)},Duration_time_expContext.prototype.EXPERIENCE=function(){return this.getToken(expParser.EXPERIENCE,0)},Duration_time_expContext.prototype.enterRule=function(a){a instanceof expListener&&a.enterDuration_time_exp(this)},Duration_time_expContext.prototype.exitRule=function(a){a instanceof expListener&&a.exitDuration_time_exp(this)},expParser.Duration_time_expContext=Duration_time_expContext,expParser.prototype.duration_time_exp=function(){var a=new Duration_time_expContext(this,this._ctx,this.state);this.enterRule(a,2,expParser.RULE_duration_time_exp);try{this.enterOuterAlt(a,1),this.state=15,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,1,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=12,matchWildcard()),this.state=17,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,1,this._ctx);this.state=18,this.match(expParser.EXP_VALUE),this.state=22,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,2,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=19,matchWildcard()),this.state=24,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,2,this._ctx);this.state=25,this.match(expParser.IN_TIME),this.state=29,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,3,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=26,matchWildcard()),this.state=31,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,3,this._ctx);this.state=32,this.match(expParser.EXPERIENCE)}catch(c){if(!(c instanceof antlr4.error.RecognitionException))throw c;a.exception=c,this._errHandler.reportError(this,c),this._errHandler.recover(this,c)}finally{this.exitRule()}return a},Exp_time_durationContext.prototype=Object.create(antlr4.ParserRuleContext.prototype),Exp_time_durationContext.prototype.constructor=Exp_time_durationContext,Exp_time_durationContext.prototype.EXPERIENCE=function(){return this.getToken(expParser.EXPERIENCE,0)},Exp_time_durationContext.prototype.EXP_VALUE=function(){return this.getToken(expParser.EXP_VALUE,0)},Exp_time_durationContext.prototype.IN_TIME=function(){return this.getToken(expParser.IN_TIME,0)},Exp_time_durationContext.prototype.enterRule=function(a){a instanceof expListener&&a.enterExp_time_duration(this)},Exp_time_durationContext.prototype.exitRule=function(a){a instanceof expListener&&a.exitExp_time_duration(this)},expParser.Exp_time_durationContext=Exp_time_durationContext,expParser.prototype.exp_time_duration=function(){var a=new Exp_time_durationContext(this,this._ctx,this.state);this.enterRule(a,4,expParser.RULE_exp_time_duration);try{this.enterOuterAlt(a,1),this.state=37,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,4,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=34,matchWildcard()),this.state=39,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,4,this._ctx);this.state=40,this.match(expParser.EXPERIENCE),this.state=44,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,5,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=41,matchWildcard()),this.state=46,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,5,this._ctx);this.state=47,this.match(expParser.EXP_VALUE),this.state=51,this._errHandler.sync(this);for(var b=this._interp.adaptivePredict(this._input,6,this._ctx);1!=b&&b!=antlr4.atn.ATN.INVALID_ALT_NUMBER;)2===b&&(this.state=48,matchWildcard()),this.state=53,this._errHandler.sync(this),b=this._interp.adaptivePredict(this._input,6,this._ctx);this.state=54,this.match(expParser.IN_TIME)}catch(c){if(!(c instanceof antlr4.error.RecognitionException))throw c;a.exception=c,this._errHandler.reportError(this,c),this._errHandler.recover(this,c)}finally{this.exitRule()}return a},exports.expParser=expParser;